K1J-501: Updated type handler to handle list of patients